Fix addToCart text overflow on mobile

--- a/src/components/ShopComponents/ShopItem/ShopItem.module.css
+++ b/src/components/ShopComponents/ShopItem/ShopItem.module.css
@@ -84,8 +84,6 @@
   border-radius: 8px;
   border: 1px solid transparent;
 
-  padding: 0 15px;
-
   font-size: 0.8em;
   font-weight: 500;
   font-family: inherit;
@@ -115,5 +113,11 @@
   .incrementCounter,
   .decrementCounter {
     background-color: #f9f9f9;
+  }
+}
+
+@media only screen and (min-width: 950px) {
+  .addToCart {
+    padding: 0 15px;
   }
 }
